fix: remove square background on div.highlight wrapper on mobile
The outer div.highlight was rendering with background: #202020 but no
border-radius, creating a square dark frame around the rounded pre.highlight
inside it. Setting div.highlight to transparent fixes the visual artifact.

--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -35,6 +35,7 @@ p code, li code {
 }
 
 .highlight .hll { background-color: #404040 }
+div.highlight { background: transparent }
 .highlight  { background: #202020; color: #f0f0f0 }
 .highlight .c { color: #1ac81f; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
